--- a/.cursorignore
+++ b/.cursorignore
@@ -1,9 +1,9 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
-.editorconfig
-.style.yapf
 
 media/
 deprecated/
 
 *.dll
 *.lib
+
+convert_clips.py
